# haskell-signaler

./: dev  signaler.cabal
src/: Lib.hs
