name:                signaler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/instant-chat/haskell-signaler
author:              Blake La Pierre
maintainer:          blakelapierre@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , stm
                     , wai-websockets
                     , websockets
                     , bytestring
                     , unagi-chan
                     , text
                     , timers
                     , suspend
                     , ctrie
  default-language:    Haskell2010

executable signaler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , signaler
  default-language:    Haskell2010

test-suite signaler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , signaler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/instant-chat/haskell-signaler
